# driverlog

./: .gitignore  .gitreview  .testr.conf  README.md  README.rst  config-generator.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
driverlog/: version.py
driverlog/dashboard/: api.py  decorators.py  helpers.py  memory_storage.py  parameters.py  vault.py  web.py
driverlog/dashboard/static/css/: jquery.dataTables.css  style.css
driverlog/dashboard/static/css/ui-lightness/: jquery-ui-1.10.4.custom.min.css
driverlog/dashboard/static/js/: driverlog-ui.js  jquery.gravatar.js
driverlog/dashboard/templates/: details.html  layout.html  summary.html
driverlog/openstack/common/: jsonutils.py  log.py
driverlog/processor/: config.py  main.py  rcs.py  utils.py
driverlog/tests/unit/: test_config_files.py  test_main.py
driverlog/tests/unit/test_data/: sample_default_data.json  sample_review.json
etc/: default_data.json  default_data.schema.json  driverlog.conf
tests/: __init__.py
tests/unit/: test_ci_configuration.py  test_config_files.py  test_main.py
tests/unit/test_data/: sample_default_data.json  sample_review.json
