[metadata]
name = driverlog
summary = DriverLog | Vendor Drivers for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    driverlog

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    driverlog-dashboard = driverlog.dashboard.web:main
    driverlog-processor = driverlog.processor.main:main

oslo.config.opts =
    oslo_log = oslo_log._options:list_opts
    driverlog.processor.config = driverlog.processor.config:list_opts
